z-index solved

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -271,7 +271,7 @@ section.header-nav-section{
     top: 0;
     left: 0;
     background: rgba(0, 0, 0, 0.9);
-    z-index: 1;
+    z-index: 100;
     overflow-x:hidden;
     transition: 0.5s;
 }
